# LangchainV1RagTutorial

./: .gitignore  main.py  pyproject.toml
notebook/: document.ipynb  pdf_loader.ipynb
